# World-Cup-Querying

./: .gitignore  CMakeLists.txt  README.md  main.cpp
back_end/: CMakeLists.txt
back_end/data/: comments.json  output.json  test_comments.json  test_data  test_data_group.json  video_list.txt
back_end/src/: CMakeLists.txt  backend.cpp  backend.h  comments.cpp  comments.h  demo.cpp  demo.h  hash.hpp  knockout.cpp  knockout.h  main.cpp  match.cpp  matches.cpp  my_time.cpp  my_time.h  my_vector.hpp  player.cpp  rank.hpp  structures.h  team.cpp  team_event.cpp  timeline.cpp  timeline.h
back_end/test/: CMakeLists.txt  algorithm_test.cpp  back_end_test.cpp  comment_test.cpp  demo_test.cpp  structure_test.cpp  test.cpp  time_test.cpp
data/: output-line.json  output.json  test_data  test_data_group
front_end/: EventDelegate.qml  FinishedMatch.qml  GoalRank.qml  GroupMatch.qml  HomePage.qml  Knockout.qml  KnockoutBox.qml  MatchDetail.qml  SharedPage.qml  TeamEvents.qml  backendqml.cpp  backendqml.h  front_end.pro  main.cpp  main.qml  qml.qrc
src/: CMakeLists.txt  Heap.hpp  demo.cpp  demo.h  hash.hpp  main.cpp  match.cpp  my_time.cpp  my_time.h  player.cpp  rank.hpp  structures.cpp  structures.h  team.cpp  timeline.cpp  timeline.h
test/: CMakeLists.txt  algorithm_test.cpp  json_test.cpp  structure_test.cpp  test.cpp  time_test.cpp  tool_test.cpp
